--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>[Flutter Project]</title>
+  <title>Flutter Project</title>
 
 
   <script src="https://use.fontawesome.com/4dfd1d7bab.js"></script>
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Rizky Flutter Project (Newbie Project)]</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Rizky Flutter Project (Newbie Project)</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>[Rizky Ahsan Syarif]</strong>
+            <strong>Rizky Ahsan Syarif</strong>
           </h1>
           <hr class="divider my-4" />
         </div>
@@ -111,14 +111,14 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Sepertinya besok]</p>
+          <p class="text-faded">Sepertinya besok</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">[Indonesia and English]</p>
-          <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
+          <p class="text-faded no-margin">Indonesia and English</p>
+          <p class="text-faded">Python, Golang and C++</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
